--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -10,6 +10,7 @@ oren_sewers: /adventure/2024/01/04/oren-sewers
 cr_10: /adventure/2024/01/07/cthonic-remains-10
 ww_wolf: /adventure/2024/01/09/west-woodland-wolf
 crypt_terror: /adventure/2024/01/11/moose-crypt-terror
+porte_experiment: /adventure/2024/01/14/porte-moose-experiment
 
 # Religion
 sgrios_mass: /religion/2024/01/09/sgrios-mass
