--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            Dylanlan
 tagline:          'A Temuairan Respite'
-description:      'A collection of information and projects from Dylanlan, all related to the 2000s MMORPG called <a href="https://www.darkages.com" target="_blank">Darkages</a>'
+description:      'A collection of adventures, information, and projects from Dylanlan, all related to the 2000s MMORPG called <a href="https://www.darkages.com" target="_blank">Darkages</a>'
 url:              https://dylanlan.ninja
 baseurl:          /
 
