--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -15,6 +15,7 @@ porte_experiment: /adventure/2024/01/14/porte-moose-experiment
 # Religion
 sgrios_mass: /religion/2024/01/09/sgrios-mass
 sgrios_forsook: /awakening/2024/01/10/nalyd-forsake-sgrios
+deoch_mass: /religion/2024/01/10/deoch-mass
 
 # Class
 protein_school: /adventure/2024/01/09/protein-school
