--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -23,3 +23,7 @@ protein_school: /adventure/2024/01/09/protein-school
 # Letters
 nalyd_landon_letters: /letters/2024/01/04/nalyd-landon-letters
 nalyd_laurier_letters: /letters/2024/01/13/nalyd-laurier-letters
+
+# Games
+cursed_mail: /games/2024/01/10/cursed-mail
+temuair_records: /games/2024/01/13/temuair-records
