Remove and update various things

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -138,8 +138,8 @@
     }
   ],
   "contributorsPerLine": 7,
-  "projectName": "devlopr-jekyll",
-  "projectOwner": "sujaykundu777",
+  "projectName": "dylanlan-ninja",
+  "projectOwner": "dylanlan",
   "repoType": "github",
   "repoHost": "https://github.com",
   "skipCi": true,
