--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "devlopr jekyll blog",
-  "description": "A Jekyll Theme built for Developers",
-  "repository": "https://github.com/sujaykundu777/devlopr-jekyll",
+  "name": "dylanlan-ninja",
+  "description": "A fan site for an old MMORPG",
+  "repository": "https://github.com/dylanlan/dylanlan.github.io",
   "keywords": ["jekyll", "blog"]
 }
