Some more updates

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,15 +1,15 @@
 backend:
   name: github
-  repo: sujaykundu777/sujaykundu777.github.io
-  branch: master
-  site_domain: agitated-northcutt-53b578.netlify.app
+  repo: dylanlan/dylanlan.github.io
+  branch: main
+  site_domain: dylanlan.ninja
 
 media_folder: "assets/img/posts" # Media files will be stored in the repo under images/uploads
 public_folder: "/assets/img/posts" # The src attribute for uploaded media will begin with /images/uploads
 publish_mode: editorial_workflow # To manage status (Edit, Draft, Publish)
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
+    label: "Adventure Log" # Used in the UI
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
