Update an email

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "dylanlan-ninja",
   "homepage": "https://github.com/dylanlan/dylanlan.github.io",
   "authors": [
-    "dylanlan <dylan.stank@gmail.com>"
+    "dylanlan <dylanlan.darkages@gmail.com>"
   ],
   "description": "A fan site for an old MMORPG",
   "main": "",
