Update domain name

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ subtitle: A Temuairan Respite
 description: >- # this means to ignore newlines until "baseurl:"
  A collection of adventures, information, and projects from Dylanlan, all related to the 2000s MMORPG called <a href="https://www.darkages.com" target="_blank">Darkages</a>
 
-url: "https://dylantest.dev" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://dylanlan.ninja" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 # Navigation
@@ -39,7 +39,7 @@ author_bio: |
   
 author_email: "dylanlan.darkages@gmail.com"
 author_location: Canada
-author_website_url: "https://dylantest.dev"
+author_website_url: "https://dylanlan.ninja"
 typewrite-text: Hello, fellow Aisling. Thanks for stopping by!
 hero_cover_img: da-login-screen.png # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
