--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 dylanlan:
    name: Dylanlan
    username: dylanlan
-   site: https://dylantest.dev
+   site: https://dylanlan.ninja
    avatar: dylanlan.png
    bio: "Hey there! I'm Dylanlan, an archer / ninja. Thanks for checking out my website!"
    email: dylanlan.darkages@gmail.com
