--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -25,5 +25,6 @@ nalyd_landon_letters: /letters/2024/01/04/nalyd-landon-letters
 nalyd_laurier_letters: /letters/2024/01/13/nalyd-laurier-letters
 
 # Games
+name_lottery: /games/2024/01/08/name-lottery
 cursed_mail: /games/2024/01/10/cursed-mail
 temuair_records: /games/2024/01/13/temuair-records
