Add a misc section, and some pages for bugs

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ urls:
       url: /links
     - text: Games
       url: /games
+    - text: Misc
+      url: /misc
     - text: Memories
       url: /gallery
     # - text: Contact
