--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -28,3 +28,7 @@ nalyd_laurier_letters: /letters/2024/01/13/nalyd-laurier-letters
 name_lottery: /games/2024/01/08/name-lottery
 cursed_mail: /games/2024/01/10/cursed-mail
 temuair_records: /games/2024/01/13/temuair-records
+
+# Games
+darkages_bugs: /misc/2024/01/04/darkages-bugs
+blog_bugs: /misc/2024/01/04/blog-bugs
