Add some silly mottos

--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -29,6 +29,7 @@ name_lottery: /games/2024/01/08/name-lottery
 cursed_mail: /games/2024/01/10/cursed-mail
 temuair_records: /games/2024/01/13/temuair-records
 
-# Games
+# Misc
 darkages_bugs: /misc/2024/01/04/darkages-bugs
 blog_bugs: /misc/2024/01/04/blog-bugs
+mottos: /misc/2024/01/04/mottos
