Make QoL page a main page

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ urls:
       url: /get-started
     - text: Adventure Log
       url: /blog
+    - text: QoL
+      url: /qol
     - text: Links
       url: /links
     - text: Games
