--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -1,3 +1,7 @@
+# Main Pages
+qol: /qol
+
+
 # Awakenings
 nalyd_reawaken: /awakening/2023/12/10/nalyd-reawakening
 sradagan_created: /awakening/2024/01/08/protein-sradagan
