Add an initial definitions page

--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -2,6 +2,7 @@
 qol: /qol
 context: /context
 sradagan: /guild
+definitions: /words
 
 # Awakenings
 nalyd_reawaken: /awakening/2023/12/10/nalyd-reawakening
