--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -33,6 +33,7 @@ nalyd_laurier_letters: /letters/2024/01/13/nalyd-laurier-letters
 name_lottery: /games/2024/01/08/name-lottery
 cursed_mail: /games/2024/01/10/cursed-mail
 temuair_records: /games/2024/01/13/temuair-records
+names_on_legends: /games/2024/01/24/names-on-legends
 
 # Misc
 darkages_bugs: /misc/2024/01/04/darkages-bugs
