Add a few more pages

--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -34,6 +34,8 @@ name_lottery: /games/2024/01/08/name-lottery
 cursed_mail: /games/2024/01/10/cursed-mail
 temuair_records: /games/2024/01/13/temuair-records
 names_on_legends: /games/2024/01/24/names-on-legends
+typos: /games/2024/01/24/typos
+item_info: /games/2024/01/24/item-info
 
 # Misc
 darkages_bugs: /misc/2024/01/04/darkages-bugs
