Change typo to a permanent page, not a post

--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -34,7 +34,7 @@ name_lottery: /games/2024/01/08/name-lottery
 cursed_mail: /games/2024/01/10/cursed-mail
 temuair_records: /games/2024/01/13/temuair-records
 names_on_legends: /games/2024/01/24/names-on-legends
-typos: /games/2024/01/24/typos
+typos: /typos
 item_info: /games/2024/01/24/item-info
 
 # Misc
