Add a multiverse page

--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -4,6 +4,7 @@ blog-qol: /blog-qol
 context: /context
 sradagan: /guild
 definitions: /words
+multiverse: /multiverse
 
 # Awakenings
 nalyd_reawaken: /awakening/2023/12/10/nalyd-reawakening
