--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -5,6 +5,7 @@ context: /context
 sradagan: /guild
 definitions: /words
 multiverse: /multiverse
+records: /records
 
 # Awakenings
 nalyd_reawaken: /awakening/2023/12/10/nalyd-reawakening
