--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -11,6 +11,7 @@ records: /records
 nalyd_reawaken: /awakening/2023/12/10/nalyd-reawakening
 sradagan_created: /awakening/2024/01/08/protein-sradagan
 enter_temuair: /awakening/2024/01/12/entering-temuair
+tridemp_master: /awakening/2024/01/30/tridemp-master
 
 # Adventures
 lynith_sea: /adventure/2024/01/03/lynith-sea
