--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 urls:
     # - text: Home
     #   url: /
+    # - text: About
+    #   url: /about
     - text: About
-      url: /about
-    - text: Context
       url: /context
     - text: Get Started
       url: /get-started
@@ -24,6 +24,8 @@ urls:
       url: /links
     - text: Games
       url: /games
+    - text: Info
+      url: /info  
     - text: Memories
       url: /gallery
     # - text: Contact
