--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -7,6 +7,8 @@ words: /words
 multiverse: /multiverse
 records: /records
 rare_items: /rare-items
+music: /music
+poetry: /poetry
 
 # Awakenings
 nalyd_awaken: /awakening/2007/02/15/nalyd-awakening
