Add temuair events gallery From in-game mail board

--- a/_data/galleries/overview.yml
+++ b/_data/galleries/overview.yml
@@ -18,3 +18,23 @@
     sizes:
     - 1.png
     thumbnail: 1.png
+-
+  title: Stone Client
+  directory: gallery/stone-client
+  url: stone-client
+  preview:
+    filename: 1
+    original: 1.png
+    sizes:
+    - 1.png
+    thumbnail: 1.png
+-
+  title: Temuair Events
+  directory: gallery/temuair-events
+  url: temuair-events
+  preview:
+    filename: 1
+    original: 1.png
+    sizes:
+    - 1.png
+    thumbnail: 1.png
