Show more stone client pics

--- a/_data/galleries/stone-client.yml
+++ b/_data/galleries/stone-client.yml
@@ -141,3 +141,163 @@ pictures:
   sizes:
   - 27.png
   thumbnail: 27.png
+- filename: stone-client
+  original: 28.png
+  sizes:
+  - 28.png
+  thumbnail: 28.png
+- filename: stone-client
+  original: 29.png
+  sizes:
+  - 29.png
+  thumbnail: 29.png
+- filename: stone-client
+  original: 30.png
+  sizes:
+  - 30.png
+  thumbnail: 30.png
+- filename: stone-client
+  original: 31.png
+  sizes:
+  - 31.png
+  thumbnail: 31.png
+- filename: stone-client
+  original: 32.png
+  sizes:
+  - 32.png
+  thumbnail: 32.png
+- filename: stone-client
+  original: 33.png
+  sizes:
+  - 33.png
+  thumbnail: 33.png
+- filename: stone-client
+  original: 34.png
+  sizes:
+  - 34.png
+  thumbnail: 34.png
+- filename: stone-client
+  original: 35.png
+  sizes:
+  - 35.png
+  thumbnail: 35.png
+- filename: stone-client
+  original: 36.png
+  sizes:
+  - 36.png
+  thumbnail: 36.png
+- filename: stone-client
+  original: 37.png
+  sizes:
+  - 37.png
+  thumbnail: 37.png
+- filename: stone-client
+  original: 38.png
+  sizes:
+  - 38.png
+  thumbnail: 38.png
+- filename: stone-client
+  original: 39.png
+  sizes:
+  - 39.png
+  thumbnail: 39.png
+- filename: stone-client
+  original: 40.png
+  sizes:
+  - 40.png
+  thumbnail: 40.png
+- filename: stone-client
+  original: 41.png
+  sizes:
+  - 41.png
+  thumbnail: 41.png
+- filename: stone-client
+  original: 42.png
+  sizes:
+  - 42.png
+  thumbnail: 42.png
+- filename: stone-client
+  original: 43.png
+  sizes:
+  - 43.png
+  thumbnail: 43.png
+- filename: stone-client
+  original: 44.png
+  sizes:
+  - 44.png
+  thumbnail: 44.png
+- filename: stone-client
+  original: 45.png
+  sizes:
+  - 45.png
+  thumbnail: 45.png
+- filename: stone-client
+  original: 46.png
+  sizes:
+  - 46.png
+  thumbnail: 46.png
+- filename: stone-client
+  original: 47.png
+  sizes:
+  - 47.png
+  thumbnail: 47.png
+- filename: stone-client
+  original: 48.png
+  sizes:
+  - 48.png
+  thumbnail: 48.png
+- filename: stone-client
+  original: 49.png
+  sizes:
+  - 49.png
+  thumbnail: 49.png
+- filename: stone-client
+  original: 50.png
+  sizes:
+  - 50.png
+  thumbnail: 50.png
+- filename: stone-client
+  original: 51.png
+  sizes:
+  - 51.png
+  thumbnail: 51.png
+- filename: stone-client
+  original: 52.png
+  sizes:
+  - 52.png
+  thumbnail: 52.png
+- filename: stone-client
+  original: 53.png
+  sizes:
+  - 53.png
+  thumbnail: 53.png
+- filename: stone-client
+  original: 54.png
+  sizes:
+  - 54.png
+  thumbnail: 54.png
+- filename: stone-client
+  original: 55.png
+  sizes:
+  - 55.png
+  thumbnail: 55.png
+- filename: stone-client
+  original: 56.png
+  sizes:
+  - 56.png
+  thumbnail: 56.png
+- filename: stone-client
+  original: 57.png
+  sizes:
+  - 57.png
+  thumbnail: 57.png
+- filename: stone-client
+  original: 58.png
+  sizes:
+  - 58.png
+  thumbnail: 58.png
+- filename: stone-client
+  original: 59.png
+  sizes:
+  - 59.png
+  thumbnail: 59.png
