Add a link to the old DA manual from the get started page

--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -15,6 +15,7 @@ nalyd_awaken: /awakening/2007/02/15/nalyd-awakening
 nalyd_reawaken: /awakening/2023/12/10/nalyd-reawakening
 sradagan_created: /awakening/2024/01/08/protein-sradagan
 enter_temuair: /awakening/2024/01/12/entering-temuair
+old_da_manual: /assets/da-manual
 tridemp_non_believers: /awakening/2024/01/20/tridemp-non-believers
 tridemp_master: /awakening/2024/02/01/tridemp-master
 
