Add get-started link to about page

--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -1,7 +1,7 @@
 # Main Pages / Info
 qol: /qol
 blog_qol: /blog-qol
-context: /context
+get_started: /get-started
 sradagan: /guild
 words: /words
 multiverse: /multiverse
