--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -27,6 +27,9 @@ ww_wolf: /adventure/2024/01/09/west-woodland-wolf
 crypt_terror: /adventure/2024/01/11/moose-crypt-terror
 porte_experiment: /adventure/2024/01/14/porte-moose-experiment
 
+# Events
+march_events: /events/march
+
 # Religion
 sgrios_mass: /religion/2024/01/09/sgrios-mass
 sgrios_forsook: /awakening/2024/01/10/nalyd-forsake-sgrios
