Cleanup various unused pages and a few misc changes

--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,8 @@ urls:
       url: /qol
     - text: Links
       url: /links
-    - text: Games
-      url: /games
-    - text: Info
-      url: /info  
+    - text: Misc
+      url: /misc
     - text: Memories
       url: /gallery
 
