Typos and cleanup

--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -45,7 +45,7 @@ nalyd_landon_letters: /letters/2024/01/04/nalyd-landon-letters
 nalyd_laurier_letters: /letters/2024/01/13/nalyd-laurier-letters
 
 # Games
-name_lottery: /name-lottery
+names: /names
 cursed_mail: /cursed-mail
 legend_names: /legend-names
 typos: /typos
