--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -10,7 +10,7 @@ rare_items: /rare-items
 music: /music
 poetry: /poetry
 hidden_lore: /hidden-lore
-famous_legends: /famous-legends
+aisling_legends: /aisling-legends
 
 # Awakenings
 nalyd_awaken: /awakening/2007/02/15/nalyd-awakening
