--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -30,6 +30,13 @@ ww_wolf: /adventure/2024/01/09/west-woodland-wolf
 crypt_terror: /adventure/2024/01/11/moose-crypt-terror
 porte_experiment: /adventure/2024/01/14/porte-moose-experiment
 
+# College
+memory_guide: /college/memory-guide
+feral_fountains: /college/feral-fountains
+
+aon_pentagram: /college/aon-pentagram
+fen_haikus: /college/fen-haikus
+
 # Events
 march_events: /events/march
 
